--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
 		
 	</body>
 	
-	<script language = "javascript" type = "text/javascript" src = "buggy.js"></script> 
+	<script language = "javascript" type = "text/javascript" src = "iffe.js"></script> 
 
 </html>
